before starting wire up

--- a/public/javascripts/signin/modaltest.html
+++ b/public/javascripts/signin/modaltest.html
@@ -20,7 +20,7 @@
   	<p><a id="go" name="test" href="#test">Basic</a></p>
 
 <div id="test">
-     <form id="frm1" action="form_action.asp">
+  <form id="frm1" action="">
 		<input type="text" name="firstname" placeholder="first name"><br>
 		<input type="text" name="lastname" placeholder="last name"><br>
 		<input type="text" name="cardnumber" placeholder="card number"><br>
